--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="primaryColor">#4a75e6</color>
     <color name="primaryColorDark">#3E60BA</color>
-    <color name="textColor">#333333</color>
+    <color name="textColor">#BDBDBD</color>
 
     <color name="blue_fog_100">#dfe0ff</color>
     <color name="blue_light_200">#b2b8fb</color>
