--- a/app/src/main/res/values/strings_config.xml
+++ b/app/src/main/res/values/strings_config.xml
@@ -8,7 +8,10 @@
     <!-- Values -->
     <string name="peek_height_percent_botSheet">95</string>
     <string name="secure_pwd_lenght">14</string>
-    <string name="secure_pwd_characters">ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789!@#$€%.~*^&amp;()_+:ç/</string>
+    <string name="secure_pwd_characters_uppercase">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ</string>
+    <string name="secure_pwd_characters_lowercase">abcdefghijklmnñopqrstuvwxyz</string>
+    <string name="secure_pwd_characters_numbers">0123456789</string>
+    <string name="secure_pwd_special_characters">!@#$%&amp;*()_+=|&#60;&#62;?{}[].~</string>
     <string name="wordCount4PasswordPhrase">20</string>
     <string name="hash_algorithm">SHA-256</string>
     <string name="max_movements_to_show">3</string>
@@ -30,9 +33,12 @@
     <string name="currency_preferences_key">currency</string>
     <string name="init_vector_preferences_key">initializationVector</string>
     <string name="secure_phrase_preferences_key">securePhrase</string>
-        <!-- Notifications -->
-        <string name="last_notification_id_key">lastNotificationId</string>
-        <string name="global_notifications_key">GlobalNotifications</string>
+
+    <!-- Notifications -->
+    <string name="last_notification_id_key">lastNotificationId</string>
+    <string name="global_notifications_key">GlobalNotifications</string>
+    <string name="preferred_notification_hour">preferredNotificationHour</string>
+    <string name="preferred_notification_minute">preferredNotificationMinute</string>
 
     <!-- Firebase Routes -->
     <string name="users_route">users</string>
